compiler/stage0/tests/snapshots/diagnostic__tests_fixtures_diagnostics_types_record_pattern_nested.snap
---
source: tests/fixtures.rs
expression: transcript
---
fixture: tests/fixtures/diagnostics/types/record_pattern_nested.ml

compile:
status: failure(1)
stdout:
<empty>
stderr:
Error: stage0::source

  × unsupported record field pattern
   ╭─[tests/fixtures/diagnostics/types/record_pattern_nested.ml:6:16]
 5 │   dbg(match value {
 6 │     point { x: 1 } -> 1,
   ·                ┬
   ·                ╰── stage0 can bind record fields of type `i64`, but cannot destructure nested record field patterns yet
 7 │     _ -> 0
   ╰────
  help: use a binder or `_` for record fields in this slice
